Changes in version 0.2.0.3-alpha - 2007-??-??
  o Minor features:
    - Create listener connections before we setuid to the configured User and
      Group.  This way, you can choose port values under 1024, start Tor as
      root, and have Tor bind those ports before it changes to another UID.
    - tor-gencert creates all files visible to the file creator only.

  o Minor bugfixes (dns):
    - Fix a crash when DNSPort is set more than once. (Patch from Robert
      Hogan.)

  o Minor bugfixes (hidden services):
    - Stop tearing down the whole circuit when the user asks for a
      connection to a port that the hidden service didn't configure.
      Resolves bug 444.


Changes in version 0.2.0.2-alpha - 2007-06-02
  o Major bugfixes on 0.2.0.1-alpha:
    - Fix an assertion failure related to servers without extra-info digests.
      Resolves bugs 441 and 442.

  o Minor features (directory):
    - Support "If-Modified-Since" when answering HTTP requests for
      directories, running-routers documents, and network-status documents.
      (There's no need to support it for router descriptors, since those
      are downloaded by descriptor digest.)

  o Minor build issues:
    - Clear up some MIPSPro compiler warnings.
    - When building from a tarball on a machine that happens to have SVK
      installed, report the micro-revision as whatever version existed
      in the tarball, not as "x".


Changes in version 0.2.0.1-alpha - 2007-06-01
  o Major features, server usability:
    - New config options RelayBandwidthRate and RelayBandwidthBurst:
      a separate set of token buckets for relayed traffic. Right now
      relayed traffic is defined as answers to directory requests, and
      OR connections that don't have any local circuits on them.

  o Major features, client usability:
    - A client-side DNS proxy feature to replace the need for
      dns-proxy-tor: Just set "DNSPort 9999", and Tor will now listen